Add color white to color selections

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
             <select name="color" id="colors">
                 <option value="black">Black</option>
                 <option value="random">Random</option>
+                <option value="white">White</option>
             </select>
+            <div class="color-darkening">
+                <div class="text">Color Darkening</div>
+                <input type="checkbox">
+            </div>
         </div>
     </div>
     <div class="etch-container"></div>
