--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <option value="white">White</option>
             </select>
             <div class="color-darkening">
-                <div class="text">Color Darkening</div>
-                <input type="checkbox">
+                <div class="text">Progressive Coloring</div>
+                <input type="checkbox" name="progressive-coloring" class="progressive-coloring">
             </div>
         </div>
     </div>
