--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <div class="text">Progressive Coloring</div>
                 <input type="checkbox" name="progressive-coloring" class="progressive-coloring">
             </div>
+            <div class="clear">Clear Board</div>
         </div>
         <div class="etch-container"></div>
     </div>
